I have a strange feeling. But I removed the jekyll stuff (again?) and renamed images so they actually match the path.

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 					circleNode.id = "nav2" + targetId;
 					circleNode.href = "#" + document.getElementsByTagName("section")[i].id
 
-					circleNode.click(function () {
+					$(circleNode.id).click(function () {
 						$('html,body').animate({
 							scrollTop: $(targetId).offset().top
 						}, 'slow');
