oh the sidenav was for buttons

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 			</ul>
 		</nav>
 
+		<div id="sidenav">
+
+		</div>
+
 		<!-- First Impressions Count ;) -->
 		<section id="intro">
 
@@ -156,7 +160,6 @@
 				</a>
 			</div>
 		</section>
-	</div>
 	</div>
 
 	<!-- JAVASCRIPT START -->
