Fix insecure script request now that we've moved to HTTPS

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 	<!-- JAVASCRIPT START -->
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"> </script>
+	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"> </script>
 	<script type="text/javascript"> 
 
 		$(document).ready(function () {
