--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
 <body style="zoom:1;">
 	<div id="sidenav">
-
 	</div>
+
 	<div class="wrapper">
 
 		<!-- Navigation Bar -->
-		<nav>
+		<header>
 			<ul class="navlist" style="list-style:none;">
 				<li class="nav_list-item" id="landingSite"></li>
 				<div id="nav-buttons">
@@ -34,7 +34,7 @@
 					</li>
 				</div>
 			</ul>
-		</nav>
+		</header>
 
 
 
@@ -72,11 +72,8 @@
 			</div>
 
 			<div id="hobby-images">
-
 				<img class="hobby-img" src=images/note.svg>
-
 				<img class="hobby-img" src=images/book.svg>
-
 				<img class="hobby-img" src=images/tree.svg>
 			</div>
 			<ul class="hobbytext">
