added to footer

--- a/index.html
+++ b/index.html
@@ -140,7 +140,11 @@
 		<!-- Contact Footer!  -->
 		<section id="footer">
 
-			<h2 style="padding-left: 50px;"> Let's start talking! </h2>
+			<h2> Let's start talking! </h2>
+			<p>No, really. I think we'd be great together.</p>
+			<p>You may formally request my presence at</p>
+			<h2>professionalhaejin@gmail.com</h2>
+			<p>Or be my friend on</p>
 			<div id="social-button-wrapper">
 				<a href="https://github.com/haejinjo" class="hvr-wobble-vertical">
 					<img class="logo-img" src=images/github.png>
