--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
 			<p>No, really. I think we'd be great together.</p>
 			<p>You may formally request my presence at</p>
 			<h2>professionalhaejin@gmail.com</h2>
+			See all the stuff on here and more in
+			<a href="./files/Jo_Haejin_Resume.pdf">resume</a> form.
+			<div style="height:90px"></div>
 			<p>Or be my friend on</p>
 			<div id="social-button-wrapper">
 				<a href="https://github.com/haejinjo" class="hvr-wobble-vertical">
