kept project cards from stretching

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
 			$("#contact").click(function () {
 				$('html,body').animate({
-					scrollTop: $("#footer").offset().top
+					scrollTop: $("#footer").offset().top - 90
 				},
 					'slow');
 			});
